Fix issue with meshes being released prematurely

... when used with lightmap baking. If the same mesh is used with and
without a baked lightmap the mesh could be released after handing out a
reference to the render mesh. To avoid this we queue the non-baked
version (as it's not compatible), to be released before the next frame,

Fixes: QTBUG-113164
Change-Id: I5957663cd9533a1ed1acf33a818fe87640707bde
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>
Reviewed-by: Inho Lee <inho.lee@qt.io>
(cherry picked from commit 9dba9d7f51704023d9f91137811174a085945ee0)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>